# tachylyte

./: .gitignore  Cargo.toml  PARITY.md  README.md
crates/tachylyte-acceptance/: Cargo.toml
crates/tachylyte-acceptance/fixtures/: Home.md  Planning.canvas  Projects.base  Unresolved.md
crates/tachylyte-acceptance/fixtures/Projects/: River.md
crates/tachylyte-acceptance/src/: lib.rs
crates/tachylyte-account-ui/: Cargo.toml
crates/tachylyte-account-ui/src/: account.rs  lib.rs  model.rs  publish.rs  sync.rs
crates/tachylyte-app/: Cargo.toml
crates/tachylyte-app/src/: editor_surface.rs  graph_view.rs  lib.rs  main.rs  settings_surface.rs  tab_notice.rs  tab_policy.rs  theme_helpers.rs  workflow_surface.rs  workspace_actions.rs
crates/tachylyte-core/: Cargo.toml
crates/tachylyte-core/src/: lib.rs
crates/tachylyte-editor-ui/: Cargo.toml
crates/tachylyte-editor-ui/src/: editor_intents.rs  editor_options.rs  lib.rs  render_surface.rs  search_bar.rs
crates/tachylyte-graph-ui/: Cargo.toml
crates/tachylyte-graph-ui/src/: lib.rs  model.rs  view.rs
crates/tachylyte-graph-ui/tests/: layout_smoke.rs
crates/tachylyte-knowledge/: Cargo.toml
crates/tachylyte-knowledge/src/: lib.rs
crates/tachylyte-launcher-model/: Cargo.toml
crates/tachylyte-launcher-model/src/: lib.rs
crates/tachylyte-markdown/: Cargo.toml
crates/tachylyte-markdown/src/: lib.rs
crates/tachylyte-markdown/tests/: semantic.rs
crates/tachylyte-media-ui/: Cargo.toml
crates/tachylyte-media-ui/src/: attachment.rs  document.rs  image.rs  lib.rs  pdf.rs  playback.rs  slides.rs  web.rs
crates/tachylyte-media-ui/tests/: web_policy.rs
crates/tachylyte-navigation-ui/: Cargo.toml
crates/tachylyte-navigation-ui/src/: explorer_intents.rs  explorer_model.rs  explorer_view.rs  lib.rs
crates/tachylyte-navigation-ui/tests/: explorer_integration.rs  selection_regression.rs
crates/tachylyte-services/: Cargo.toml  README.md
crates/tachylyte-services/src/: lib.rs
crates/tachylyte-settings-ui/: Cargo.toml
crates/tachylyte-settings-ui/src/: lib.rs  model.rs  view.rs
crates/tachylyte-settings-ui/tests/: settings_model.rs
crates/tachylyte-structured/: Cargo.toml
crates/tachylyte-structured-ui/: Cargo.toml
crates/tachylyte-structured-ui/src/: bases.rs  bases_formula.rs  bases_intents.rs  bases_layout.rs  canvas.rs  canvas_geometry.rs  canvas_history.rs  canvas_input.rs  lib.rs
crates/tachylyte-structured-ui/tests/: bases_scenario.rs  canvas_scenario.rs
crates/tachylyte-structured/fixtures/: base.yaml  canvas.json
crates/tachylyte-structured/src/: lib.rs
crates/tachylyte-theme/: Cargo.toml  MIGRATION.md
crates/tachylyte-theme/src/: accessors.rs  appearance.rs  color.rs  lib.rs
crates/tachylyte-vaults/: Cargo.toml
crates/tachylyte-vaults/src/: atomic_persist.rs  lib.rs  plan_validation.rs
crates/tachylyte-vaults/tests/: lifecycle.rs
crates/tachylyte-workflow-ui/: Cargo.toml
crates/tachylyte-workflow-ui/src/: composer.rs  lib.rs  model.rs  panes.rs  surfaces.rs
crates/tachylyte-workflow-ui/tests/: list_navigation.rs
crates/tachylyte-workflows/: Cargo.toml
crates/tachylyte-workflows/src/: lib.rs
crates/tachylyte-workspace/: Cargo.toml
crates/tachylyte-workspace/src/: api.rs  history.rs  lib.rs  view_types.rs
crates/tachylyte-workspace/tests/: behavior.rs
src/: lib.rs
