[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
gpui = "=0.2.2"
tachylyte-core = { path = "crates/tachylyte-core" }
tachylyte-knowledge = { path = "crates/tachylyte-knowledge" }
tachylyte-markdown = { path = "crates/tachylyte-markdown" }
