[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
gpui = "=0.2.2"
tachylyte-theme = { path = "crates/tachylyte-theme" }
dirs = "5"
rfd = { version = "0.17.2", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tachylyte-core = { path = "crates/tachylyte-core" }
tachylyte-knowledge = { path = "crates/tachylyte-knowledge" }
tachylyte-markdown = { path = "crates/tachylyte-markdown" }
tachylyte-workflows = { path = "crates/tachylyte-workflows" }
tachylyte-workflow-ui = { path = "crates/tachylyte-workflow-ui" }
tachylyte-media-ui = { path = "crates/tachylyte-media-ui" }
tachylyte-settings-ui = { path = "crates/tachylyte-settings-ui" }
tachylyte-graph-ui = { path = "crates/tachylyte-graph-ui" }
tachylyte-editor-ui = { path = "crates/tachylyte-editor-ui" }
tachylyte-account-ui = { path = "crates/tachylyte-account-ui" }
tachylyte-launcher-model = { path = "crates/tachylyte-launcher-model" }
tachylyte-navigation-ui = { path = "crates/tachylyte-navigation-ui" }
tachylyte-workspace = { path = "crates/tachylyte-workspace" }
