[package]
name = "tachylyte-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
dirs.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tachylyte-core.workspace = true
tachylyte-knowledge.workspace = true
tachylyte-markdown.workspace = true
tachylyte-theme.workspace = true
tachylyte-settings-ui.workspace = true
tachylyte-graph-ui.workspace = true
tachylyte-editor-ui.workspace = true
tachylyte-workflow-ui.workspace = true

[dev-dependencies]
tempfile = "3"
