[package]
name = "tachylyte-editor-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reusable GPUI Markdown editor and render-neutral projection"

[dependencies]
gpui.workspace = true
tachylyte-markdown = { path = "../tachylyte-markdown" }
unicode-segmentation = "1.13"
unicode-width = "0.2"
