[package]
name = "tachylyte-services"
version = "0.1.0"
edition = "2021"
description = "Offline-first boundaries for Tachylyte services and platform integrations"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
serde_json = "1"
