[package]
name = "tachylyte-vaults"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent local vault registry and vault creation service"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
