[package]
name = "tachylyte-workflow-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure GPUI surfaces for composing and presenting workflow intents"

[dependencies]
gpui.workspace = true
serde.workspace = true
tachylyte-knowledge.workspace = true
tachylyte-workflows.workspace = true
